# lab-data-simulator

./: .claudeignore  .cursorignore  .gitignore  CLAUDE.md  CODE_REVIEW.md  GEMINI.md  LICENSE  README.md  pixi.toml  pyproject.toml  setup_env.sh
.github/workflows/: python-app.yml
examples/: demo_simulation.py
src/lab_data_simulator/: __init__.py
src/lab_data_simulator/core/: __init__.py  model.py
src/lab_data_simulator/simulators/: __init__.py  calculations.py  compound_reg.py  liquid_handler.py  plate_reader.py
src/lab_data_simulator/simulators/analytics/: __init__.py  flow.py  hci.py  purity.py  spr.py
tests/integration/: test_pipeline.py
tests/unit/: test_analytics.py  test_liquid_handler.py  test_plate_reader.py
