[tool.poetry]
name = "lab_data_simulator"
version = "0.1.0"
description = "A library for simulating laboratory data (Plate Readers, Liquid Handlers, etc.)"
authors = ["James Bullis <jamesbullis@gmail.com>"]
readme = "README.md"
packages = [{ include = "lab_data_simulator", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.9"
pandas = ">=2.0.0"
numpy = ">=1.24.0"
scipy = ">=1.10.0"
matplotlib = ">=3.7.0"
rdkit = ">=2022.9.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
black = "^24.0.0"
flake8 = "^7.0.0"
ipykernel = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "src"
