[project]
name = "lab_data_simulator"
version = "0.1.0"
description = "A library for simulating laboratory data (Plate Readers, Liquid Handlers, etc.)"
authors = [
    { name = "James Bullis", email = "jamesbullis@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "rdkit>=2022.9.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lab_data_simulator"]

[tool.pytest.ini_options]
pythonpath = "src"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "flake8>=7.0.0",
    "ipykernel>=6.0.0",
]

